[gd_scene load_steps=13 format=3 uid="uid://brd2skoctkkxe"]

[ext_resource type="Script" uid="uid://b1ofr4umso5jf" path="res://src/systems/scenes/game/game_scene.gd" id="1_ids3t"]
[ext_resource type="Script" uid="uid://c1od80bn28h0l" path="res://src/systems/sequencing/sequence_interface.gd" id="6_7pixw"]
[ext_resource type="Texture2D" uid="uid://bi6eonsejp6ma" path="res://src/player/sigil.png" id="9_5mwt8"]
[ext_resource type="AudioStream" uid="uid://b4ccjxsuwusfl" path="res://src/audio/bgm/2kki_zaza.wav" id="9_a27ul"]
[ext_resource type="Script" uid="uid://bnajku7ggsr2q" path="res://src/systems/world_loop/loopable_component.gd" id="11_5mwt8"]
[ext_resource type="Script" uid="uid://ctqw6a8qsvnv4" path="res://src/systems/sequencing/event/audio/play_bgm.gd" id="11_44x1d"]
[ext_resource type="PackedScene" uid="uid://c8bnpo28a373g" path="res://src/systems/camera/camera.tscn" id="12_d0p7m"]
[ext_resource type="PackedScene" uid="uid://ryhx8o46er7i" path="res://src/player/2D/madotsuki/madotsuki.tscn" id="13_p2qgu"]
[ext_resource type="Script" uid="uid://desxt7tbq37sf" path="res://src/systems/world_loop/loop_manager.gd" id="16_syomr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kciqk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6176"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31k7y"]
size = Vector2(500, 500)

[node name="GameScene" type="Node" node_paths=PackedStringArray("seq_initial", "scene_objects")]
script = ExtResource("1_ids3t")
seq_initial = NodePath("on_initial")
scene_objects = [NodePath("on_initial")]
load_transition = SubResource("ShaderMaterial_kciqk")
unload_transition = SubResource("ShaderMaterial_f6176")
metadata/_custom_type_script = "uid://b1ofr4umso5jf"

[node name="Node" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Node"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D"]
texture = ExtResource("9_5mwt8")

[node name="LoopableComponent" type="Node2D" parent="Node/Node2D" node_paths=PackedStringArray("manager", "target", "dupe_nodes")]
script = ExtResource("11_5mwt8")
manager = NodePath("../../../LoopManager")
target = NodePath("..")
dupe_nodes = [NodePath("loop_Node2D_0"), NodePath("loop_Node2D_1"), NodePath("loop_Node2D_2"), NodePath("loop_Node2D_3"), NodePath("loop_Node2D_4"), NodePath("loop_Node2D_5"), NodePath("loop_Node2D_6"), NodePath("loop_Node2D_7")]
metadata/_custom_type_script = "uid://bnajku7ggsr2q"

[node name="loop_Node2D_0" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="loop_Node2D_1" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_1"]
texture = ExtResource("9_5mwt8")

[node name="loop_Node2D_2" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_2"]
texture = ExtResource("9_5mwt8")

[node name="loop_Node2D_3" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_3"]
texture = ExtResource("9_5mwt8")

[node name="loop_Node2D_4" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_4"]
texture = ExtResource("9_5mwt8")

[node name="loop_Node2D_5" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_5"]
texture = ExtResource("9_5mwt8")

[node name="loop_Node2D_6" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_6"]
texture = ExtResource("9_5mwt8")

[node name="loop_Node2D_7" type="Node2D" parent="Node/Node2D/LoopableComponent"]

[node name="Sprite2D" type="Sprite2D" parent="Node/Node2D/LoopableComponent/loop_Node2D_7"]
texture = ExtResource("9_5mwt8")

[node name="LoopManager" type="Node" parent="." node_paths=PackedStringArray("loop_objects", "loop_objects_detect", "shape_detect")]
script = ExtResource("16_syomr")
loop_objects = [null]
world_size = Vector2(500, 500)
loop_objects_detect = NodePath("loop_objects_detect")
shape_detect = NodePath("loop_objects_detect/detect_shape")
metadata/_custom_type_script = "uid://desxt7tbq37sf"

[node name="loop_objects_detect" type="Area2D" parent="LoopManager"]
collision_mask = 64

[node name="detect_shape" type="CollisionShape2D" parent="LoopManager/loop_objects_detect"]
shape = SubResource("RectangleShape2D_31k7y")

[node name="camera_handler" parent="." node_paths=PackedStringArray("initial_target") instance=ExtResource("12_d0p7m")]
position = Vector2(48, 240)
initial_target = NodePath("../madotsuki")

[node name="madotsuki" parent="." instance=ExtResource("13_p2qgu")]
position = Vector2(48, 240)

[node name="on_initial" type="Node" parent="." node_paths=PackedStringArray("front", "back")]
script = ExtResource("6_7pixw")
initialized = true
front = NodePath("Event")
back = NodePath("Event")

[node name="Event" type="Node" parent="on_initial"]
script = ExtResource("11_44x1d")
stream = ExtResource("9_a27ul")
metadata/_custom_type_script = "uid://0v2nidb8jsha"
